# AlphaLineage---alpha-factor-with-genetics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.cmd  start.ps1
configs/: dev.yaml
cpp/: CMakeLists.txt  evaluator.cpp
docs/: TUTORIAL.md
frontend/: .env.app  .env.docker  USABILITY.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: demo-run.json
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts  dataSource.ts  types.ts
frontend/src/app/: App.genealogy.test.tsx  App.quit.test.tsx  App.tsx  AppShell.test.tsx  AppShell.tsx  CompactSection.tsx  DataPullProgress.test.tsx  DataPullProgress.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ExtendMenu.test.tsx  ExtendMenu.tsx  SettingsMenu.test.tsx  SettingsMenu.tsx  mode.ts  workspace.test.ts  workspace.ts
frontend/src/dashboard/: Dashboard.test.tsx  Dashboard.tsx  Sparkline.tsx
frontend/src/extend/: ExtendPanel.test.tsx  ExtendPanel.tsx  FormulaCanvas.tsx  FormulaEditorPage.test.tsx  FormulaEditorPage.tsx  OperatorComposer.test.tsx  OperatorComposer.tsx  SyncDataPage.test.tsx  SyncDataPage.tsx  UniverseBuilder.test.tsx  UniverseBuilder.tsx  UniverseEditorPage.test.tsx  UniverseEditorPage.tsx  UniverseUpdater.test.tsx  UniverseUpdater.tsx  bodyToGraph.test.ts  bodyToGraph.ts  formulaGraph.test.ts  formulaGraph.ts  formulaText.test.ts  formulaText.ts  graphToBody.test.ts  graphToBody.ts  toUniversePayload.test.ts  toUniversePayload.ts  treeEdit.test.ts  (+1 more)
scripts/: Start-AlphaLineage.ps1  Stop-AlphaLineage.ps1  bench_evaluator.py  build_cpp.py  download_universe.py  export_demo.py  run_gp.py
src/alphaforge/: __init__.py
src/alphalineage/: __init__.py
tests/: conftest.py  test_adjust.py  test_api.py  test_backtest.py  test_cpp_evaluator.py  test_data.py  test_demo_export.py  test_extensibility.py  test_factors.py  test_fitness.py  test_formula_editor.py  test_gp.py  test_library.py  test_panel.py  test_providers.py  test_retry.py  test_schema.py  test_sessions.py  test_settings.py  test_tree_evaluate.py  test_tree_generate.py  test_tree_primitives.py  test_tree_serialize.py  test_tree_simplify.py  test_tree_types.py  test_usage.py  test_validation.py
(+105 files in other folders)
