[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaforge"
version = "0.1.0"
description = "Evolutionary (genetic-programming) alpha-factor mining platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "AlphaForge" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "requests>=2.31",
    "yfinance>=0.2.40",
    "python-dotenv>=0.21",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "requests-mock>=1.12",
    "types-requests>=2.31",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alphaforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
mypy_path = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["alphaforge"]
branch = true
